--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "frechet_music_distance"
-version = "0.1.0"
+version = "1.0.0"
 dependencies = [
   "abctoolkit",
   "accelerate",
@@ -16,7 +16,8 @@ dependencies = [
   "mido",
   "transformers",
   "torch",
-  "unidecode"
+  "unidecode",
+  "scikit-learn"
 ]
 requires-python = ">=3.9"
 authors = [
