--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,4 +48,11 @@ Repository = "https://github.com/jryban/frechet-music-distance.git"
 fmd = "frechet_music_distance.__main__:main"
 
 [tool.setuptools]
-packages = ["frechet_music_distance", "frechet_music_distance.models", "frechet_music_distance.models.clamp2"]
+packages = [
+  "frechet_music_distance",
+  "frechet_music_distance.models",
+  "frechet_music_distance.models.clamp2",
+  "frechet_music_distance.models.clamp",
+  "frechet_music_distance.gaussian_estimators",
+  "frechet_music_distance.dataloaders",
+]
